--- a/PetApp_Empresa/Views/Shared/_Layout.cshtml
+++ b/PetApp_Empresa/Views/Shared/_Layout.cshtml
@@ -74,32 +74,32 @@
                 {
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Mascotas" asp-action="VistaMascota">
-                                <i class="fas fa-box-open"></i> VistaMascota
+                                <i class="fas fa-box-open"></i> Vista Mascota
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Mascotas" asp-action="Index">
-                                <i class="fas fa-box-open"></i> MascotasGeneral
+                                <i class="fas fa-box-open"></i> Mascotas General
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Mascotas" asp-action="MisMascotas">
-                                <i class="fas fa-box-open"></i> MisMascotas
+                                <i class="fas fa-box-open"></i> Mis Mascotas
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Mascotas" asp-action="MisDonaciones">
-                                <i class="fas fa-paw"></i> MisDonaciones
+                                <i class="fas fa-paw"></i> Mis Donaciones
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Refugios" asp-action="Index">
-                                <i class="fas fa-paw"></i> MisRefuios
+                                <i class="fas fa-paw"></i> Mis Refugios
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Refugios" asp-action="VerificarSolicitudes">
-                                <i class="fas fa-paw"></i> VerificarSolicitudes
+                                <i class="fas fa-paw"></i> Verificar Solicitudes
                             </a>
                         </li>
                 }
