--- a/PetApp_Empresa/Views/Home/DashboardAdmin.cshtml
+++ b/PetApp_Empresa/Views/Home/DashboardAdmin.cshtml
@@ -68,6 +68,11 @@
                 <i class="fas fa-users"></i> Usuarios
             </a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link btn btn-outline-primary mb-2" asp-area="" asp-controller="Validaciones" asp-action="ValidacionesPago">
+                <i class="fas fa-check-circle"></i> Validaciones de Pago
+            </a>
+        </li>
     </ul>
 </div>
 
